# ami-py

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: check_coverage.yaml  ruff_check.yaml
src/ami/: __init__.py  ci.py  container.py  cpu.py  envvar.py  networking.py  os.py  positron.py  python.py  quarto.py  uv.py  virtualenv.py  vscode.py
tests/: test_container.py  test_uv.py  test_venv.py
